@@ -17,19 +17,25 @@ sub run {
   my $common = $params->{common};
   my $logger = $params->{logger};
 
+  my @date;
   my @list;
   my $buff;
-  foreach (`rpm -qa --queryformat "%{NAME}.%{ARCH} %{VERSION}-%{RELEASE} --%{INSTALLTIME:date}-- --%{SIZE}-- %{SUMMARY}\n--\n" 2>/dev/null`) {
+  foreach (`rpm -qa --queryformat "%{NAME}.%{ARCH} %{VERSION}-%{RELEASE} --%{INSTALLTIME}-- --%{SIZE}-- %{SUMMARY}\n--\n" 2>/dev/null`) {
     if (! /^--/) {
       chomp;
       $buff .= $_;
     } elsif ($buff =~ s/^(\S+)\s+(\S+)\s+--(.*)--\s+--(.*)--\s+(.*)//) {
+    my ($name,$version,$installdate,$filesize,$comments) = ( $1,$2,$3,$4,$5 );
+
+    @date = localtime($installdate);
+    $installdate = sprintf( "%04d-%02d-%02d %02d:%02d:%02d", $date[5] + 1900, $date[4] + 1, $date[3], $date[2], $date[1], $date[0]);
+
     $common->addSoftware({
-        'NAME'          => $1,
-        'VERSION'       => $2,
-        'INSTALLDATE'   => $3,
-        'FILESIZE'      => $4,
-        'COMMENTS'      => $5,
+        'NAME'          => $name,
+        'VERSION'       => $version,
+        'INSTALLDATE'   => $installdate,
+        'FILESIZE'      => $filesize,
+        'COMMENTS'      => $comments,
         'FROM'          => 'rpm'
 		});
     } else {
